fix: Prevent missing images from being too large

--- a/source/css/index.styl
+++ b/source/css/index.styl
@@ -10,12 +10,6 @@
   width: 100%
   margin: 0 auto
 
-  img
-    max-width: 100%
-    height: auto
-    display: inline-block
-    vertical-align: middle
-
   .post-item
     p
       text-indent: 0
