--- a/source/css/layout.styl
+++ b/source/css/layout.styl
@@ -33,7 +33,7 @@ a:hover
 
 img
   max-width: 100%
-  height: auto
+  height: fit-content
   display: inline-block
   vertical-align: middle
   $dark-mode = hexo-config('dark_mode')
